fix overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
   top: 0;
   height: 5.25rem;
   width: 100%;
+  display: flex;
   justify-content: center;
   align-items: center;
   background-color: var(--dark-gray-bg);
@@ -15,6 +16,7 @@
 }
 
 .header-wrapper {
+  display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 0 auto;
@@ -30,13 +32,14 @@
 
 .nav-wrapper {
   width: 440px;
+  display: flex;
   justify-content: space-around;
 }
 
 .nav-wrapper li {
   color: var(--light-gray-txt);
   font: 14px/1.6 var(--font-light);
-  transition: color 0.4s ease 0s;
+  transition: color 0.4s ease;
 }
 
 .active,
@@ -46,26 +49,27 @@
 
 .burger-bar-wrapper {
   width: 30px;
+  display: flex;
   flex-direction: column;
   cursor: pointer;
   gap: 7px;
   z-index: 2;
 }
 
-.burger-bar-wrapper > div:first-child,
-.burger-bar-wrapper > div:last-child,
-.burger-bar-wrapper > div:nth-child(2) {
+.burger-bar-wrapper>div:first-child,
+.burger-bar-wrapper>div:last-child,
+.burger-bar-wrapper>div:nth-child(2) {
   width: 15px;
   height: 3px;
   border-radius: 4px;
   background-color: #dbdbdb;
 }
 
-.burger-bar-wrapper > div:nth-child(2) {
+.burger-bar-wrapper>div:nth-child(2) {
   width: 100%;
 }
 
-.burger-bar-wrapper > div:last-child {
+.burger-bar-wrapper>div:last-child {
   align-self: flex-end;
 }
 
@@ -91,14 +95,13 @@
 .aside {
   width: 50%;
   height: 100%;
-  position: relative;
   position: absolute;
   right: 0;
-  width: 50%;
   padding-right: 10%;
   top: 0;
   justify-content: flex-end;
   align-items: center;
+  z-index: 10;
 }
 
 .aside-overlay {
@@ -114,22 +117,23 @@
   position: absolute;
   right: 10%;
   top: 139%;
-  z-index: 2;
 }
 
 .nav-wrapper-clicked {
   flex-direction: column;
   justify-content: flex-end;
-  align-items: end;
+  align-items: flex-end;
   row-gap: 30px;
   z-index: 2;
   color: var(--light-gray-txt);
   font: 14px/1.6 var(--font-light);
   transition: color 0.4s ease 0s;
 }
+
 .nav-wrapper-clicked li a:hover {
   color: rgb(0, 163, 224);
 }
+
 /* intro section */
 .intro-section-container {
   background: url("../images/intro_wallpaper.jpg") center/cover no-repeat;
@@ -195,13 +199,12 @@
 .card-wrapper {
   border: 0.3px solid rgba(245, 245, 245, 0.334);
   border-radius: 5px;
-  /* height: 413px; */
   max-width: 300px;
   width: 100%;
   color: var(--light-gray-txt);
 }
 
-.card-wrapper > img {
+.card-wrapper>img {
   width: 100%;
   height: 150px;
   object-fit: cover;
@@ -209,12 +212,12 @@
   border-top-right-radius: 5px;
 }
 
-.card-wrapper > div {
+.card-wrapper>div {
   margin-top: 34px;
   margin-left: 22px;
 }
 
-.card-wrapper > div h5 {
+.card-wrapper>div h5 {
   font: 18px/1.6em var(--font-regular);
   max-width: 211px;
   width: 100%;
@@ -222,28 +225,28 @@
   margin-bottom: 25px;
 }
 
-.card-wrapper > div p {
+.card-wrapper>div p {
   font: 14px/1.6em var(--font-regular);
 }
 
-.card-wrapper > div > div {
+.card-wrapper>div>div {
   margin-top: 5.3rem;
   margin-bottom: 2rem;
   align-items: center;
   color: rgb(0, 174, 239);
 }
 
-.card-wrapper > div > div > img {
+.card-wrapper>div>div>img {
   margin: 14px 10px 10px 0;
 }
 
-.card-wrapper > div > div > span a {
+.card-wrapper>div>div>span a {
   font: 16px/1.6em var(--font-regular);
   font-weight: 500;
   transition: color 0.4s ease;
 }
 
-.card-wrapper > div > div > span a:hover {
+.card-wrapper>div>div>span a:hover {
   color: rgb(0, 128, 176);
 }
 
@@ -273,15 +276,13 @@
 .partners-arrow-wrapper img {
   width: 18px;
   height: 39px;
-  filter: invert(89%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(103%)
-    contrast(100%);
+  filter: invert(89%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(103%) contrast(100%);
   transition: filter 0.4s ease 0s;
 }
 
 .partners-arrow-wrapper:hover img {
   cursor: pointer;
-  filter: invert(89%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(103%)
-    contrast(100%) brightness(80%);
+  filter: invert(89%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(103%) contrast(100%) brightness(80%);
 }
 
 .partners-list-wrapper {
@@ -368,7 +369,7 @@
   grid-area: 2/1/2/3;
 }
 
-.accordion-div-wrapper > span {
+.accordion-div-wrapper>span {
   grid-area: 1/2;
   text-align: end;
 }
@@ -379,12 +380,12 @@
   border-bottom: 0.5px solid rgba(245, 245, 245, 0.278);
 }
 
-.accordion-cards-container li > div {
+.accordion-cards-container li>div {
   justify-content: space-between;
   cursor: pointer;
 }
 
-.accordion-cards-container li > div h3 {
+.accordion-cards-container li>div h3 {
   font: 18px/1.6em var(--font-regular);
 }
 
@@ -447,7 +448,7 @@ footer {
   height: 39px;
 }
 
-.social-icons-wrapper > a {
+.social-icons-wrapper>a {
   margin-right: 10px;
 }
 
